[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Background.gd" type="Script" id=2]
[ext_resource path="res://Textures/right_eye.png" type="Texture" id=3]
[ext_resource path="res://Textures/left_eye.png" type="Texture" id=4]
[ext_resource path="res://Textures/pupil.png" type="Texture" id=5]

[node name="Background" type="CanvasLayer"]
layer = -1
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="RightEye" type="TextureRect" parent="."]
margin_left = 507.0
margin_top = 100.0
margin_right = 547.0
margin_bottom = 140.0
texture = ExtResource( 3 )

[node name="LeftEye" type="TextureRect" parent="."]
margin_left = 398.0
margin_top = 104.0
margin_right = 438.0
margin_bottom = 144.0
texture = ExtResource( 4 )

[node name="LeftPupil" type="TextureRect" parent="."]
margin_left = 398.0
margin_top = 104.0
margin_right = 438.0
margin_bottom = 144.0
texture = ExtResource( 5 )

[node name="RightPupil" type="TextureRect" parent="."]
margin_left = 506.0
margin_top = 100.0
margin_right = 546.0
margin_bottom = 140.0
texture = ExtResource( 5 )
